<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ThirdPageActivity">

    <LinearLayout
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_500"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5sp">

            <TextView
                android:id="@+id/emailtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/purple_200"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5sp"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    android:src="@drawable/h_2" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/start_next"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/let_s_begin"
                    android:textColor="@color/white"
                    app:cornerRadius="10sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/mentor_support"
                    android:id="@+id/mentor"
                    android:backgroundTint="#7F65CC"/>
                <Button
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:backgroundTint="#5A94EA"
                    android:padding="10dp"
                    android:text="@string/logout"
                    android:textColor="#311B92" />
            </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>