<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondPageActivity"
    android:padding="10dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/MainImage2"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/h_2"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/UserNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="25dp"
            android:padding="5dp"
            android:text="@string/username_or_email"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MainImage2" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="0dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rectbox"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UserNameText"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/PasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="25dp"
            android:padding="5dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="0dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rectbox"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PasswordText"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rectbox"
            android:padding="10dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassWord"
            tools:ignore="TextContrastCheck" />
        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user_n_register_here"
            android:gravity="center"
            android:layout_marginTop="30dp"/>
        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rectbox_nc"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/GoogleSignIn"
                android:layout_width="320dp"
                android:layout_height="40dp" />
            <!--            -->
<!--            <ImageView-->
<!--                android:layout_width="85dp"-->
<!--                android:layout_height="20dp"-->
<!--                android:layout_marginTop="6dp"-->
<!--                app:srcCompat="@drawable/gl"-->
<!--                android:contentDescription="@string/todo1" />-->

<!--            <TextView-->
<!--                android:layout_width="177dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/login_with_google"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="15sp"-->
<!--                android:layout_marginTop="4dp"/>-->

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>