<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".cp_1"
    android:background="#E5E0FF"
    android:scrollbarSize="0dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginEnd="30dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view1"
            android:layout_width="340dp"
            android:layout_height="80dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basic_concept"
                    android:textSize="35sp"
                    android:textColor="@color/blue"
                    android:layout_marginStart="10dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/programming"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="340dp"
            android:layout_height="360dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/intro1"
                android:padding="10dp"
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="@color/blue"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view3"
            android:layout_width="340dp"
            android:layout_height="290dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="299dp"
                android:orientation="horizontal"
                android:padding="10dp">
                <ImageView
                    android:id="@+id/cb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/screenshot_2022_10_26_at_6_36_36_pm"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view4"
            android:layout_width="340dp"
            android:layout_height="360dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/blue"
                    android:layout_margin="10dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/screenshot_2022_10_26_at_7_05_13_pm"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view5"
            android:layout_width="340dp"
            android:layout_height="130dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view4">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:gravity="center">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/useful_notes"
                   android:gravity="center"
                   android:padding="15dp"
                   android:textSize="20sp"
                   android:textColor="@color/blue"/>

               <com.google.android.material.button.MaterialButton
                   android:layout_width="300dp"
                   android:layout_height="wrap_content"
                   android:text="@string/get_pdf"
                   android:id="@+id/pdf"
                   android:backgroundTint="#FF5722"/>

           </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view6"
            android:layout_width="340dp"
            android:layout_height="130dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view5">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/access_playlist"
                    android:gravity="center"
                    android:padding="15dp"
                    android:textSize="20sp"
                    android:textColor="@color/blue"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start_playlist"
                    android:id="@+id/yt"
                    android:backgroundTint="#313EEE"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>